solved for alignment with flex

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,15 +1,34 @@
 body {
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
 }
 
 img {
   width: 100px;
   height: 100px;
+  display: block;
+  margin: 0 auto;
 }
 
 .title {
   font-size: 36px;
   font-weight: 900;
+  width: fit-content;
+  margin: 0 auto 32px auto;
+}
+
+.plant-section {
+  display: flex;
+  justify-content: space-around;
+  gap: 52px;
+}
+
+.plant {
+  width: 200px;
+}
+
+.text {
+  text-align: center;
+  text-wrap: balance;
 }
 
 /* do not edit this footer */
